# fitopscentral

./: jsconfig.json  next.config.mjs  package-lock.json  package.json  playwright.config.js  vitest.config.js
.github/workflows/: deploy.yml
e2e/: packages.spec.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: app-config.json
src-tauri/resources/ZKBridge/: ZKBridge.deps.json  ZKBridge.runtimeconfig.json
src-tauri/resources/sqlite/: local.db  schema.sql
src-tauri/resources/whatsapp/: package-lock.json  package.json
src-tauri/src/: main copy.rs  main.rs  utils.rs  ws_bridge.rs  zkteco_com.rs
src-tauri/src/commands/: admission.rs  arduino.rs  config.rs  dirty.rs  expenses.rs  gyms.rs  inserts_local.rs  messaging_ext.rs  mod.rs  packages.rs  query.rs  secugen.rs  staff.rs  state.rs  sync.rs  sync_log.rs  templates.rs  upsert_local.rs  user.rs  whatsapp_update.rs  zkteco.rs
src/app/: comps.css  globals.css  layout.js  page.js  robots.js  sitemap.js
src/app/(marketing)/: layout.jsx  page.jsx
src/app/about/: page.jsx
src/app/app/: LoginUI.jsx  PageContent.jsx  page.jsx  resourceServices.js  sessionServices.js  useResourcesManager.js  useSessionManager.js
src/app/auth-error/: AuthErrorClient.jsx  page.jsx
src/app/contact/: page.jsx
src/app/forgot-password/: page.jsx
src/app/lib/: createClient.jsx  functions.jsx  migrations.jsx  useAppBootstrap.jsx  (+2 more)
src/hooks/: useCheckInternet.js  useConfirm.jsx  useRuntime.js  useThermalPrinter.jsx
src/store/: authSlice.js  profileSlice.js  store.js
(+95 files in other folders)
