[package]
name = "app"
version = "0.1.0"
description = "FitopsCentral Gym Manager Desktop"
edition = "2021"
build = "build.rs"

[dependencies]
# --- Core Tauri 2 ---
tauri = { version = "2.9.3", features = ["default", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-log = "2.0"
copy_dir = "0.1.3"
fs_extra = "1.3"
# --- Async ---
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
futures-util = "0.3"

# --- WebSockets ---
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# --- SQLite local database ---
rusqlite = { version = "0.30", features = ["bundled"] }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- HTTP / time / utils ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1.3"
base64 = "0.22"
anyhow = "1.0"
sysinfo = "0.29"
# --- Misc ---
once_cell = "1.19"
byteorder = "1"
log = "0.4"
serialport = "4.3"
# --- Playwright automation (unchanged)
playwright = "0.0.18"
rodio = "0.18"
zip = "0.6"

# --- REMOVE ALL Windows / WinAPI / COM dependencies ---
# You are now using C# ZKBridge.exe, so Rust does NOT touch COM.
# ---------------------------------------------------------

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

